--- a/src/app/features/shop/hamper-builder.component.html
+++ b/src/app/features/shop/hamper-builder.component.html
@@ -29,7 +29,7 @@
         <p class="section-desc">Select products to add to your hamper</p>
 
         <div class="products-grid">
-          @for (product of availableProducts(); track product.id) {
+          @for (product of paginatedProducts(); track product.id) {
             <div
               class="product-card-mini"
               [class.selected]="hamperService.isProductInHamper(product.id)"
@@ -59,6 +59,55 @@
             </div>
           }
         </div>
+
+        <!-- Pagination Controls -->
+        @if (totalPages() > 1) {
+          <div class="pagination">
+            <button
+              class="pagination-btn"
+              (click)="previousPage()"
+              [disabled]="currentPage() === 1"
+              aria-label="Previous page"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path
+                  fill-rule="evenodd"
+                  d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </button>
+
+            @for (page of getPageNumbers(); track page) {
+              @if (page === -1) {
+                <span class="pagination-ellipsis">...</span>
+              } @else {
+                <button
+                  class="pagination-number"
+                  [class.active]="currentPage() === page"
+                  (click)="goToPage(page)"
+                >
+                  {{ page }}
+                </button>
+              }
+            }
+
+            <button
+              class="pagination-btn"
+              (click)="nextPage()"
+              [disabled]="currentPage() === totalPages()"
+              aria-label="Next page"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path
+                  fill-rule="evenodd"
+                  d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </button>
+          </div>
+        }
       </div>
     </div>
 
