--- a/src/app/features/checkout/checkout.component.scss
+++ b/src/app/features/checkout/checkout.component.scss
@@ -562,6 +562,16 @@
 @media (max-width: 960px) {
   .checkout-grid {
     grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .summary-card {
+    order: 2;
+  }
+
+  .checkout-form {
+    order: 1;
   }
 
   .submit-btn {
