--- a/src/app/features/shop/hamper-builder.component.scss
+++ b/src/app/features/shop/hamper-builder.component.scss
@@ -273,6 +273,7 @@
               height: 50px;
               object-fit: cover;
               border-radius: 6px;
+              flex-shrink: 0;
             }
 
             .item-details {
